syntax = "proto3";

package coffee;

option go_package = "github.com/nabind47/go47/coffee";

message MenuRequest {}
message Order {
  repeated Item items = 1;
}
message Receipt {
  string id = 1;
}
message OrderStatus {
  string orderId = 1;
  string status = 2;
}
message Menu {
  repeated Item items = 1;
}
message Item {
  string id = 1;
  string name = 2;
}

service CoffeeShop {
  rpc GetMenu(MenuRequest) returns (stream Menu) {}
  rpc PlaceOrder(Order) returns (Receipt) {}
  rpc GetOrderStatus(Receipt) returns (OrderStatus) {}
}